--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ flask-migrate = "*"
 flask-restful = "*"
 flask-marshmallow = "*"
 marshmallow-sqlalchemy = "*"
+flask-cors = "*"
 
 [dev-packages]
 
